Added to the registration page

--- a/frontend/src/SignUp/SignUpForm.css
+++ b/frontend/src/SignUp/SignUpForm.css
@@ -7,11 +7,16 @@
 }
 
 .regFormField{
-  margin-top: 2vh;
+  width: 30%;
+  margin-top: 10px;
   font-size: 2vw;
   border-radius: 4px;
   border: 1px solid black;
   font-family: "Verdana", sans-serif;
+}
+
+#role{
+  width: 25%;
 }
 
 .submitButton{
@@ -24,4 +29,8 @@
   background-color: #429346; 
   color: white;
   cursor: pointer;
+}
+
+.error_msg{
+  color: #cc342c;
 }
